--- a/roles/sshd/tasks/main.yml
+++ b/roles/sshd/tasks/main.yml
@@ -33,6 +33,7 @@
         api_version: v1
         name: "{{ sshd_namespace }}"
         kind: Namespace
+      when: sshd_public_keys | length > 0
       tags:
         - sshd
 
