fix(squid_proxy): Swap python3-distutils for python3-setuptools

--- a/roles/squid_proxy_ha/tasks/prepare.yml
+++ b/roles/squid_proxy_ha/tasks/prepare.yml
@@ -6,7 +6,7 @@
     name: 
       - pcs
       - pacemaker
-      - python3-distutils
+      - python3-setuptools
       - libxml2-utils
       - ufw
       - fail2ban
