--- a/roles/squid_proxy_ha/tasks/prepare.yml
+++ b/roles/squid_proxy_ha/tasks/prepare.yml
@@ -7,6 +7,7 @@
       - pcs
       - pacemaker
       - python3-setuptools
+      - python3-passlib
       - libxml2-utils
       - ufw
       - fail2ban
