fix(squid_proxy): Remove pip installed passlib

--- a/roles/squid_proxy_ha/tasks/prepare.yml
+++ b/roles/squid_proxy_ha/tasks/prepare.yml
@@ -15,9 +15,9 @@
       - golang
       - apparmor-utils
 
-- name: Install passlib (required for htpasswd module)
-  pip:
-    name: passlib
+# - name: Install passlib (required for htpasswd module)
+#   pip:
+#     name: passlib
 
 - name: Set unique name of ha cluster (used for grouping)
   set_fact:
