feat: provisioning grafana dashboards

--- a/roles/kubernetes_prometheus/tasks/grafana-dashboards.yml
+++ b/roles/kubernetes_prometheus/tasks/grafana-dashboards.yml
@@ -7,4 +7,5 @@
     proxy: "{{ proxy_url | default(omit, true) }}"
     proxy_headers: "{{ proxy_headers | default(omit, true) }}"
     template: "grafana-dashboard.yml.j2"
+    namespace: monitoring
   loop: "{{ kubernetes_prometheus_dashboards }}"
