--- a/roles/kubernetes_prometheus/tasks/grafana-dashboards.yml
+++ b/roles/kubernetes_prometheus/tasks/grafana-dashboards.yml
@@ -7,5 +7,7 @@
     proxy: "{{ proxy_url | default(omit, true) }}"
     proxy_headers: "{{ proxy_headers | default(omit, true) }}"
     template: "grafana-dashboard.yml.j2"
-    namespace: monitoring
+    namespace: "{{ item.namespace | default('monitoring') }}"
   loop: "{{ kubernetes_prometheus_dashboards }}"
+  loop_control:
+    label: "{{ item.namespace | default('monitoring') }}"
