feat: provisioning grafana dashboards

--- a/roles/kubernetes_prometheus/tasks/grafana-dashboards.yml
+++ b/roles/kubernetes_prometheus/tasks/grafana-dashboards.yml
@@ -10,4 +10,4 @@
     namespace: "{{ item.namespace | default('monitoring') }}"
   loop: "{{ kubernetes_prometheus_dashboards }}"
   loop_control:
-    label: "{{ item.namespace | default('monitoring') }}"
+    label: "{{ (item.namespace | default('monitoring')) }}"
