feat: provisioning grafana dashboards

--- a/roles/kubernetes_prometheus/defaults/main.yml
+++ b/roles/kubernetes_prometheus/defaults/main.yml
@@ -1,5 +1,7 @@
 ---
 grafana_resource_name: grafana-main
+grafana_label_selector:
+  dashboards: "grafana-main"
 kubernetes_prometheus_dashboards:
   - name: events
     folder: Monitoring
