--- a/roles/kubernetes_prometheus/tasks/main.yml
+++ b/roles/kubernetes_prometheus/tasks/main.yml
@@ -39,6 +39,9 @@
   loop: "{{ prometheus_instances }}"
   tags: prometheus
 
+- debug:
+    msg: "User: {{ grafana_adminUser }}, URL: {{ grafana_main_url }}, SA-Name: {{ grafana_sa_name }}, SA-Role: {{ grafana_sa_role }}"
+
 - name: Create service account
   uri:
     url: "{{ grafana_main_url }}/api/serviceaccounts"
@@ -46,6 +49,7 @@
     user: "{{ grafana_adminUser }}"
     password: "{{ grafana_adminPassword }}"
     force_basic_auth: yes
+    debug: yes
     status_code: 200,201
     body_format: json
     body:
