--- a/roles/kubernetes_prometheus/tasks/main.yml
+++ b/roles/kubernetes_prometheus/tasks/main.yml
@@ -39,12 +39,20 @@
   loop: "{{ prometheus_instances }}"
   tags: prometheus
 
-- name: Create service account (mit explizitem Authorization-Header)
+- debug:
+    msg: "Passwort-Länge: {{ grafana_adminPassword | length }}"
+
+- debug:
+    msg: "{{ {'name': grafana_sa_name, 'role': grafana_sa_role} | to_json }}"
+
+- name: Create service account (curl-like headers)
   uri:
     url: "{{ grafana_main_url }}/api/serviceaccounts"
     method: POST
     headers:
       Content-Type: "application/json"
+      Accept: "*/*"
+      User-Agent: "curl/7.81.0"
       Authorization: "Basic {{ (grafana_adminUser + ':' + grafana_adminPassword) | b64encode }}"
     status_code: 200,201
     body_format: json
@@ -53,6 +61,8 @@
       role: "{{ grafana_sa_role }}"
   register: sa_response
 
+- debug:
+    var: sa_response
 # - name: Create service account
 #   uri:
 #     url: "{{ grafana_main_url }}/api/serviceaccounts"
