--- a/roles/kubernetes_prometheus/tasks/main.yml
+++ b/roles/kubernetes_prometheus/tasks/main.yml
@@ -48,7 +48,6 @@
 - name: Create service account (curl-like headers)
   uri:
     url: "{{ grafana_main_url }}/api/serviceaccounts"
-    proxy: "http://10.65.117.35:3128"
     method: POST
     headers:
       Content-Type: "application/json"
@@ -60,6 +59,9 @@
     body:
       name: "{{ grafana_sa_name }}"
       role: "{{ grafana_sa_role }}"
+  environment:
+    http_proxy: "http://10.65.117.35:3128"
+    https_proxy: "http://10.65.117.35:3128"      
   register: sa_response
 
 - debug:
