--- a/roles/privacyidea_ha/tasks/generate_keys.yml
+++ b/roles/privacyidea_ha/tasks/generate_keys.yml
@@ -1,20 +1,9 @@
-
 ---
 - name: Copy privacyidea config file 'pi.cfg'
   template:
     src: pi.cfg.j2
     dest: /etc/privacyidea/pi.cfg
   notify: restart uwsgi
-
-# Audit Keys (private.pem and public.pem) are used to sign and verify the audit logs, 
-# ensuring that the audit log entries are tamper-proof and can be verified.
-- name: Generate private key for PrivacyIDEA audit log
-  command: "{{ privacyidea_dir }}/virtualenv/bin/pi-manage create_audit_keys"
-  args:
-    chdir: "{{ privacyidea_dir }}"
-    creates: /etc/privacyidea/private.pem
-  become: true
-  when: is_main_node
 
 - name: Create public key file for subscription signature validation
   copy:
@@ -24,8 +13,39 @@
     owner: www-data
     group: www-data
 
+# Audit Keys (private.pem and public.pem) are used to sign and verify the audit logs, 
+# ensuring that the audit log entries are tamper-proof and can be verified.
+- name: Get audit key from vault
+  block:
+    - name: Get private audit key  from vault
+      ansible.builtin.copy:
+        content: "{{ privacyidea_audit_privatekey }}"
+        dest: /etc/privacyidea/private.pem
+        mode: 0600
+        group: www-data
+        owner: www-data
+        
+    - name: Get public audit key from vault
+      ansible.builtin.copy:
+        content: "{{ privacyidea_audit_publickey }}"
+        dest: /etc/privacyidea/public.pem
+        mode: 0600
+        group: www-data
+        owner: www-data
+  when: 
+    - privacyidea_audit_publickey is defined
+    - privacyidea_audit_privatekey is defined
+
 - name: Exchange AUDIT Keys
   block:
+    - name: Generate private key for PrivacyIDEA audit log
+      command: "{{ privacyidea_dir }}/virtualenv/bin/pi-manage create_audit_keys"
+      args:
+        chdir: "{{ privacyidea_dir }}"
+        creates: /etc/privacyidea/private.pem
+      become: true
+      when: is_main_node
+    
     - name: Get auth private key 
       ansible.builtin.fetch:
         src: "/etc/privacyidea/private.pem"
@@ -64,3 +84,6 @@
         state: absent
       delegate_to: localhost
       ignore_errors: true
+  when: 
+    - privacyidea_audit_publickey is not defined
+    - privacyidea_audit_privatekey is not  defined
