--- a/roles/kubernetes_common/defaults/main.yml
+++ b/roles/kubernetes_common/defaults/main.yml
@@ -1,3 +1,4 @@
+kubernetes_event_exporter_enabled: true
 kubernetes_event_exporter_chart_version: 2.1.2
 cert_manager_clusterissuer_enabled: false
 cert_manager_clusterissuer_chart_version: 1.0.0
