--- a/roles/privacyidea_ha/tasks/certificate.yml
+++ b/roles/privacyidea_ha/tasks/certificate.yml
@@ -44,7 +44,7 @@
 - name: Ensure nodes are present in known_hosts file
   known_hosts:
     name: "{{ hostvars[item]['ansible_hostname'] }}"
-    key: "{{ lookup('pipe', 'ssh-keyscan ' ~ hostvars[item]['inventory_hostname']) | string }}"
+    key: "{{ lookup('pipe', 'ssh-keyscan ' ~ hostvars[item]['inventory_hostname'] ~ '| (grep -vE ^#)') | string }}"
     hash_host: true
   when: is_main_node
   loop: "{{ groups[unique_ha_group] }}"
